--- a/style.css
+++ b/style.css
@@ -9,3 +9,18 @@ html {
   font-size: 100%;
   font-family: Arial,メイリオ;
 }
+
+/* フッター　*/
+
+#footer {
+    background-color: #4caf50;
+    color:#fff
+    
+  }
+  
+
+  
+  #footer .copyright {
+      font-size:10px;
+      text-align:center;
+  }
