--- a/style.css
+++ b/style.css
@@ -10,15 +10,57 @@ html {
   font-family: Arial,メイリオ;
 }
 
+/* ボタンのデザイン */
+
+.btn-1 {
+    width: 300px;
+    height: 56px;
+    color: white;
+    background: #ffa726;
+    border: solid 1px #ffa726;
+    border-radius:30px;
+    display: inline-block;
+    font-size: 35px;
+    padding: 7px 20px;
+    margin-top: 30px;
+    margin-bottom: 30px;
+    text-align: center;
+  }
+
+  .btn-2 {
+    width: 300px;
+    height: 56px;
+    color: white;
+    background: #4caf50;
+    border: solid 1px #4caf50;
+    border-radius:30px;
+    display: inline-block;
+    font-size: 35px;
+    padding: 7px 20px;
+    margin-top: 15px;
+    margin-bottom: 15px;
+    text-align: center;
+  }
+
+  /* ボタンの配置 */
+
+  #btn {
+    display: flex;
+    flex-direction:column;
+    align-items: center;
+  }
+
 /* フッター　*/
 
 #footer {
     background-color: #4caf50;
     color:#fff
-    
   }
   
-
+ #footer .name-1 {
+    font-size: 20px;
+    text-align: center;
+ }
   
   #footer .copyright {
       font-size:10px;
