6/14出来たところまで

--- a/style.css
+++ b/style.css
@@ -18,7 +18,7 @@ html {
     color: white;
     background: #ffa726;
     border: solid 1px #ffa726;
-    border-radius:30px;
+    border-radius:30px; /* 角丸の半径を設定、角を丸める */
     display: inline-block;
     font-size: 35px;
     padding: 7px 20px;
@@ -33,7 +33,7 @@ html {
     color: white;
     background: #4caf50;
     border: solid 1px #4caf50;
-    border-radius:30px;
+    border-radius:30px; /* 角丸の半径を設定、角を丸める */
     display: inline-block;
     font-size: 35px;
     padding: 7px 20px;
@@ -49,6 +49,23 @@ html {
     flex-direction:column;
     align-items: center;
   }
+
+
+/* ヘッダー */
+
+#header {
+    display: flex; /* フレックスボックスにする */
+    flex-direction: row; /* フレックスアイテムを横に並べる */
+    justify-content:space-around;	/* 均等に配置し、各アイテムの両側にスペースを作る */
+    width: 100%;
+    height: 80px;
+    align-items: center;
+    flex: 1;
+    padding: 30px 40px 25px;
+    background-color: #4caf50;
+    color: #fff;
+}
+
 
 /* フッター　*/
 
