--- a/style.css
+++ b/style.css
@@ -9,6 +9,15 @@ html {
   font-size: 100%;
   font-family: Arial,メイリオ;
 }
+a {
+  text-decoration: none;
+}
+img {
+  max-width: 100%;
+}
+li {
+  list-style: none;
+}
 
 /* ボタンのデザイン */
 
@@ -56,7 +65,8 @@ html {
 #header {
     display: flex; /* フレックスボックスにする */
     flex-direction: row; /* フレックスアイテムを横に並べる */
-    justify-content:space-around;	/* 均等に配置し、各アイテムの両側にスペースを作る */
+    justify-content:space-between;	/* 均等に配置し、スペースを作る */
+    flex-wrap: nowrap; /* 折り返し指定・一行 */
     width: 100%;
     height: 80px;
     align-items: center;
@@ -66,6 +76,61 @@ html {
     color: #fff;
 }
 
+#header .list-1 {
+  display: flex; /* フレックスボックスにする */
+  flex-direction: row; /* フレックスアイテムを横に並べる */
+  justify-content:space-between;	/* 均等に配置し、スペースを作る */
+  flex-wrap: nowrap; /* 折り返し指定・一行 */
+  gap: 20px;
+}
+
+/* メインヴィジュアル */
+#mainvisual img {
+  width: 100%;
+  object-fit: cover;
+}
+
+/* キャッチフレーズ */
+
+.catchphrase {
+  text-align: center;
+}
+
+.catchphrase-1 {
+  color: 3d3d3d;
+  font-family: HGPMinchoB;
+  font-size: 30px;
+}
+
+.catchphrase-2{
+  color: 4caf50;
+  font-family: HGPMinchoB;
+  font-size: 30px;
+}
+
+/* メインコンテンツ */
+
+#main-contents {
+  display: flex; /* フレックスボックスにする */
+}
+
+#main-contents .title-1 {
+  color: 3d3d3d;
+  font-family: HGPMinchoB;
+  font-size: 25px;
+  text-align: center;
+}
+
+#main-contents .contents {
+  font-size: 18px;
+  width: 50%;
+  margin-right: 50px;
+}
+
+.img-1 {
+  width: 50%;
+  margin: 50px;
+}
 
 /* フッター　*/
 
