--- a/style.css
+++ b/style.css
@@ -125,6 +125,7 @@ li {
   display: flex; /* フレックスボックスにする */
   /* flex-basis: auto; /* flexアイテムの幅を自動で調整 */
   margin: 0 40px;
+  /* width: 100%; */
 }
 
 #main-contents .title-1 {
@@ -137,14 +138,14 @@ li {
 
 #main-contents .contents {
   font-size: 18px;
-  /* width: 50%; */
-  /* margin-right: 15px; */
+  width: 50%;
+  margin-right: 45px;
 }
 
 .img-1 {
-  width: 100%;
+  width: 50%;
   max-width: 1200PX;
-  margin: 15px;
+  margin: 45px;
   object-fit: cover;
 }
 
